# wildwood

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  TODO.md  check_binning.py  check_boston.py  check_cat.py  check_data.py  check_dataset.py  check_encoder.py  check_forest.py  check_iris.py  check_tree.py  debug.py  encoder.ipynb  essai-biner.ipynb  essai.py  essai_tqdm.py  exp_modelsize.py  heatmap.ipynb  main.py  main_tree.py  max_bins.ipynb  plot_signals_weighted_depth.py  pyproject.toml  survival_tree_notebook.ipynb  time_tree.py
.github/workflows/: python-app.yml
benchmark/: benchmark_wildwood.py  config.yaml  print_results.py
docs/: .buildinfo  Makefile  api.md  biblio.bib  conf.py  experiments.md  index.md  index.rst  objects.inv  requirements.txt  requirements_extra.txt  search.html  searchindex.js  wildwood.md
docs/_static/: alabaster.css
examples/: playground_cat_tree.py  playground_forest.py  playground_tree.py  playground_tree_regression.py
experiments/: benchmark.py  benchmark_classifiers.py  benchmark_classifiers_ibrahim.py  benchmark_default_params.py  benchmark_regressors.py  catboost_classifier.py  catboost_regressor.py  check-results.ipynb  datasets.py  exp_regression.py  experiment.py  fig_aggregation_effect.py  fig_auc_fit_time.py  lightgbm_classifier.py  lightgbm_regressor.py  mimic_fig1_AMF.ipynb  n_tree_experiment.py  n_trees_experiment.ipynb  output.txt  run_benchmark_datasize_classifiers.py  run_benchmark_default_params_classifiers.py  run_hyperopt_classfiers.py  sklearn_SVM_classifier.py  sklearn_linear_regression.py  sklearn_logistic_regression.py  sklearn_random_forest.py  sklearn_random_forest_regressor.py  wildwood_classifier.py  xgboost_classifier.py  xgboost_regressor.py
paper/: biblio-journal.bib  neurips_2020.tex
tests/: test_core.py  test_data_loader.py  test_dataset.py  test_encoder.py  test_forest.py  test_log_rank.py  test_max_bins.py  test_score.py  test_serialization.py  utils.py
wildwood/: __init__.py  _binning.py  _classes.py  _criterion.py  _grow.py  _grower.py  _histogram.py  _impurity.py  _log_rank_test.py  _node.py  _node_methods.py  _random.py  _split.py  _splitter.py  _splitting.py  _tree.py  _tree_context.py  _tree_old.py  _utils.py  forest.py  plot.py  score.py  signals.py  tree.py
wildwood/dataset/: __init__.py  _amazon.py  _utils.py  dataset.py
wildwood/datasets/: __init__.py  _adult.py  _amazon.py  _bank.py  _car.py  _default_cb.py  _epsilon.py  _higgs.py  _internet.py  _kick.py  _utils.py  dataset.py  loaders.py
wildwood/old/: _classes.py  _criterion.py  _splitter.py
wildwood/preprocessing/: __init__.py  _binning.py  _checks.py  dataset.py  encoder.py  features_bitarray.py
